--- a/src/main/resources/fxml/SettingsWindow.fxml
+++ b/src/main/resources/fxml/SettingsWindow.fxml
@@ -7,10 +7,10 @@
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
-   <ListView layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="230.0" />
-   <Button layoutX="801.0" layoutY="277.0" mnemonicParsing="false" text="Edit Selected" AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="200.0" />
+   <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="230.0" />
+   <Button fx:id="editPreset" layoutX="801.0" layoutY="277.0" mnemonicParsing="false" onAction="#onPresetEdit" text="Edit Selected" AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="200.0" />
    <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="145.0" text="Create new preset" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
    <Label layoutX="10.0" layoutY="368.0" prefHeight="17.0" prefWidth="107.0" text="Saved Presets" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="200.0" />
-   <Button layoutX="686.0" layoutY="277.0" mnemonicParsing="false" text="Save Preset" AnchorPane.rightAnchor="205.0" AnchorPane.topAnchor="200.0" />
-   <Button layoutX="624.0" layoutY="200.0" mnemonicParsing="false" text="Delete Selected" AnchorPane.rightAnchor="10.0" />
+   <Button fx:id="savePreset" layoutX="686.0" layoutY="277.0" mnemonicParsing="false" onAction="#onPresetSave" text="Save Preset" AnchorPane.rightAnchor="205.0" AnchorPane.topAnchor="200.0" />
+   <Button fx:id="deletePreset" layoutX="624.0" layoutY="200.0" mnemonicParsing="false" onAction="#onPresetDelete" text="Delete Selected" AnchorPane.rightAnchor="10.0" />
 </AnchorPane>
