--- a/src/main/resources/fxml/PresetsWindow.fxml
+++ b/src/main/resources/fxml/PresetsWindow.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane id="SettingsWindow" fx:id="SettingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.youtubeuploader.settings.SettingsController">
+<AnchorPane id="SettingsWindow" fx:id="SettingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.youtubeuploader.settings.PresetsWindowController">
    <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="260.0" />
    <Button fx:id="editPreset" layoutX="801.0" layoutY="277.0" mnemonicParsing="false" onAction="#onPresetEdit" text="Edit Selected" AnchorPane.rightAnchor="114.0" AnchorPane.topAnchor="230.0" />
    <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="145.0" text="Create new preset" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0" />
