--- a/src/main/resources/fxml/PresetsWindow.fxml
+++ b/src/main/resources/fxml/PresetsWindow.fxml
@@ -3,11 +3,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane id="SettingsWindow" fx:id="SettingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.youtubeuploader.settings.PresetsWindowController">
-   <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="260.0" />
-   <Button fx:id="editPreset" layoutX="801.0" layoutY="277.0" mnemonicParsing="false" onAction="#onPresetEdit" text="Edit Selected" AnchorPane.rightAnchor="114.0" AnchorPane.topAnchor="230.0" />
-   <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="145.0" text="Create new preset" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0" />
-   <Label layoutX="10.0" layoutY="368.0" prefHeight="17.0" prefWidth="107.0" text="Saved Presets" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="235.0" />
-   <Button fx:id="savePreset" layoutX="686.0" layoutY="277.0" mnemonicParsing="false" onAction="#onPresetSave" text="Save Preset" AnchorPane.rightAnchor="204.0" AnchorPane.topAnchor="230.0" />
-   <Button fx:id="deletePreset" layoutX="624.0" layoutY="200.0" mnemonicParsing="false" onAction="#onPresetDelete" text="Delete Selected" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="230.0" />
-   <Button fx:id="btn_tips" layoutX="294.0" layoutY="230.0" mnemonicParsing="false" onAction="#onTipsClicked" text="tips" AnchorPane.rightAnchor="286.0" AnchorPane.topAnchor="230.0" />
+   <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="65.0" />
+   <ToolBar layoutX="10.0" layoutY="6.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <items>
+         <Button fx:id="btn_tips" mnemonicParsing="false" onAction="#onTipsClicked" text="tips" />
+         <Button fx:id="addNewPreset" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onPresetAddNew" prefHeight="25.0" prefWidth="106.0" text="Add New Preset" />
+         <Button mnemonicParsing="false" text="Refresh Playlists" />
+      </items>
+   </ToolBar>
+   <Label layoutX="92.0" layoutY="104.0" prefHeight="17.0" prefWidth="107.0" text="Saved Presets" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="45.0" />
 </AnchorPane>
