--- a/src/main/resources/fxml/PresetsWindow.fxml
+++ b/src/main/resources/fxml/PresetsWindow.fxml
@@ -6,6 +6,7 @@
    <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="65.0" />
    <ToolBar layoutX="10.0" layoutY="6.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <Button fx:id="btn_tips" mnemonicParsing="false" onAction="#onTipsClicked" text="tips" />
+      <Button fx:id="btn_localizeCategories" mnemonicParsing="false" onAction="#onLocalizeCategories" text="Localize Categories" />
       <Button fx:id="btn_refreshPlaylists" mnemonicParsing="false" onAction="#onRefreshPlaylists" text="Refresh Playlists" />
       <TextField fx:id="txt_nameNewPreset" prefHeight="25.0" prefWidth="142.0" promptText="New Preset Name" />
       <Button fx:id="addNewPreset" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onPresetAddNew" prefHeight="25.0" prefWidth="106.0" text="Add New Preset" />
