--- a/src/main/java/io/github/stekeblad/youtubeuploader/main/mainWindow.fxml
+++ b/src/main/java/io/github/stekeblad/youtubeuploader/main/mainWindow.fxml
@@ -13,7 +13,7 @@
                 prefWidth="148.0" text="Pick files to upload"/>
         <Label text="Select a preset"/>
         <ChoiceBox id="choice_presets" fx:id="choice_presets" prefWidth="150.0"/>
-        <Label text="Auto numbers"/>
+        <Label text="Automatic numbering"/>
         <TextField fx:id="text_autoNum" maxWidth="-Infinity" prefHeight="25.0" prefWidth="72.0"/>
         <Button fx:id="btn_applyPreset" mnemonicParsing="false" onAction="#onApplyPresetClicked" text="Apply preset"/>
     </VBox>
