--- a/src/main/resources/fxml/PresetsWindow.fxml
+++ b/src/main/resources/fxml/PresetsWindow.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane id="SettingsWindow" fx:id="SettingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.youtubeuploader.settings.PresetsWindowController">
+<AnchorPane id="SettingsWindow" fx:id="SettingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.videouploader.settings.PresetsWindowController">
    <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" prefHeight="375.0" prefWidth="876.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="65.0" />
    <ToolBar layoutX="10.0" layoutY="6.0" prefHeight="40.0" prefWidth="725.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <Button fx:id="btn_tips" mnemonicParsing="false" onAction="#onTipsClicked" text="tips" />
