In MainWindow are now all the startAll, abortAll etc. buttons placed vertically instead of horizontally and a abortAllAndClear button has been added.
Changed so the code for opening the user's web browser is executed on a
background thread instead of the UI thread.

Modified the code for getting localized categories, creating new playlists
and downloading all existing playlists to perform some of their work on
a background thread.

--- a/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
+++ b/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane fx:id="mainWindowPane" prefHeight="828.0" prefWidth="1105.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.videouploader.main.mainWindowController">
     <ToolBar prefHeight="40.0" prefWidth="1088.0">
       <Button id="btn_presets" fx:id="btn_presets" mnemonicParsing="false" onAction="#onSettingsClicked" text="Settings" />
     </ToolBar>
-    <ListView fx:id="listView" layoutX="15.0" layoutY="350.0" prefHeight="464.0" prefWidth="1070.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="225.0" />
+    <ListView fx:id="listView" layoutX="15.0" layoutY="350.0" prefHeight="464.0" prefWidth="1070.0"
+              AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0"
+              AnchorPane.topAnchor="200.0"/>
    <ListView id="chosen_files" fx:id="chosen_files" layoutX="14.0" layoutY="40.0" prefHeight="154.0" prefWidth="309.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="40.0" />
     <VBox layoutX="324.0" layoutY="40.0" prefHeight="145.0" prefWidth="177.0" spacing="4.0">
         <Button fx:id="buttonPickFile" mnemonicParsing="false" onAction="#onPickFileClicked" prefHeight="25.0" prefWidth="148.0" text="Pick files to upload" />
@@ -16,9 +19,18 @@
         <TextField fx:id="text_autoNum" maxWidth="-Infinity" prefHeight="25.0" prefWidth="72.0" />
         <Button fx:id="btn_applyPreset" mnemonicParsing="false" onAction="#onApplyPresetClicked" text="Apply preset" />
     </VBox>
-    <HBox layoutX="877.0" layoutY="194.0" prefHeight="25.0" prefWidth="461.0" spacing="10.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="195.0">
-      <Button fx:id="btn_abortAll" mnemonicParsing="false" onAction="#onAbortAllUploadsClicked" text="Abort All Uploads" />
-        <Button fx:id="btn_removeFinished" mnemonicParsing="false" onAction="#onRemoveFinishedUploadsClicked" text="Remove All Finished Uploads" />
-        <Button fx:id="btn_startAll" mnemonicParsing="false" onAction="#onStartAllUploadsClicked" text="Start All Ready Uploads" />
-    </HBox>
+    <VBox alignment="TOP_RIGHT" layoutX="809.0" layoutY="40.0" maxHeight="180.0" prefWidth="279.0" spacing="5.0"
+          AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="40.0">
+        <opaqueInsets>
+            <Insets/>
+        </opaqueInsets>
+        <Button fx:id="btn_startAll" mnemonicParsing="false" onAction="#onStartAllUploadsClicked"
+                text="Start All Ready Uploads"/>
+        <Button fx:id="btn_removeFinished" mnemonicParsing="false" onAction="#onRemoveFinishedUploadsClicked"
+                text="Remove All Finished Uploads"/>
+        <Button fx:id="btn_abortAll" mnemonicParsing="false" onAction="#onAbortAllUploadsClicked"
+                text="Abort All Uploads"/>
+        <Button fx:id="btn_abortAndClear" mnemonicParsing="false" onAction="#onAbortAndClearClicked"
+                text="Abort All and Clear Uploads Area"/>
+    </VBox>
 </AnchorPane>
