- Replaced uses of initialize with myInit add added a call to it at the end of the window creation (I want access to scene in the init method and it is not accessible in initilize) - Made it possible to quickly get to a relevant wiki page by pressing F1, does not currently always work. - Made the method in OpenInBrowser static and added a alternative version that just takes a String and silently errors if something went wrong - The word settings should not be used then referring to presets (may soon add a actual settings window)

--- a/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
+++ b/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
@@ -6,7 +6,8 @@
 <AnchorPane fx:id="mainWindowPane" prefHeight="828.0" prefWidth="1105.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.stekeblad.videouploader.main.mainWindowController">
     <ToolBar fx:id="toolbar" prefHeight="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
              AnchorPane.topAnchor="0.0">
-      <Button id="btn_presets" fx:id="btn_presets" mnemonicParsing="false" onAction="#onSettingsClicked" text="Settings" />
+        <Button id="btn_presets" fx:id="btn_presets" mnemonicParsing="false" onAction="#onPresetsClicked"
+                text="Settings"/>
     </ToolBar>
     <ListView fx:id="listView" layoutX="15.0" layoutY="350.0" AnchorPane.bottomAnchor="15.0"
               AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="200.0"/>
