--- a/src/main/resources/fxml/PresetsWindow.fxml
+++ b/src/main/resources/fxml/PresetsWindow.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane fx:id="settingsWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111"
+<AnchorPane fx:id="presetWindow" prefHeight="687.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.111"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="io.github.stekeblad.videouploader.settings.PresetsWindowController">
+            fx:controller="io.github.stekeblad.videouploader.windowControllers.PresetsWindowController">
     <ListView fx:id="listPresets" layoutX="14.0" layoutY="389.0" AnchorPane.bottomAnchor="10.0"
               AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="65.0"/>
     <ToolBar fx:id="toolbar" layoutX="10.0" layoutY="6.0" prefHeight="40.0" prefWidth="725.0"
