- Added button to open settings window in main window -  Created class TranslationsMeta that loads all translation files in stings/meta/ to make all of them easy accessible in settings window - improved error message that appear when a preset failed to load - the settings window can now list all translations (that have a meta file) and display the meta details about them, can not change language yet

--- a/src/main/resources/fxml/SettingsWindow.fxml
+++ b/src/main/resources/fxml/SettingsWindow.fxml
@@ -40,8 +40,6 @@
             text="About this translation" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
     <Label fx:id="label_resetSettings" text="Reset application settings" GridPane.columnIndex="1"
            GridPane.rowIndex="6"/>
-    <Button fx:id="btn_fullDelete" mnemonicParsing="false" onAction="#onFullDeleteClicked"
-            text="del login, settings, presets, pl-cache" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
-    <Button fx:id="btn_userDelete" mnemonicParsing="false" onAction="#onUserDeleteClicked"
-            text="del login info and playlists" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
+    <Button fx:id="btn_clearStoredData" mnemonicParsing="false" onAction="#onClearStoredDataClicked"
+            text="CLEAR STORED DATA" textFill="#ee0101" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
 </GridPane>
