--- a/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
+++ b/src/main/java/io/github/stekeblad/videouploader/main/mainWindow.fxml
@@ -7,7 +7,8 @@
     <ToolBar fx:id="toolbar" prefHeight="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
              AnchorPane.topAnchor="0.0">
         <Button id="btn_presets" fx:id="btn_presets" mnemonicParsing="false" onAction="#onPresetsClicked"
-                text="Settings"/>
+                text="Presets"/>
+        <Button fx:id="btn_settings" mnemonicParsing="false" onAction="#onSettingsClicked" text="Settings"/>
     </ToolBar>
     <ListView fx:id="listView" layoutX="15.0" layoutY="350.0" AnchorPane.bottomAnchor="15.0"
               AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="200.0"/>
